fix: align to center better

--- a/src/components/RoughHeader/RoughHeader.scss
+++ b/src/components/RoughHeader/RoughHeader.scss
@@ -6,5 +6,6 @@
 
   svg {
     align-self: center;
+    width: 120px;
   }
 }
